<?xml version="1.0" encoding="utf-8"?>
<!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband3 for more book information.
-->
<resources>
   <string name="app_name">Go Green</string>
   <string name="main_title">Go Green</string>
   <string name="info_label">Information</string>
   <string name="game_label">Games</string>
   <string name="Map">Map</string>
   <string name="exit_label">Exit</string>

   <string name="settings_label">Settings...</string>
   <string name="settings_title">Sudoku settings</string>
   <string name="settings_shortcut">s</string>
   <string name="music_title">Music</string>
   <string name="music_summary">Play background music</string>
   <string name="hints_title">Hints</string>
   <string name="hints_summary">Show hints during play</string>

   <string name="new_game_title">Difficulty</string>
   <string name="easy_label">Easy</string>
   <string name="medium_label">Medium</string>
   <string name="hard_label">Hard</string>

    <string name="go_green">Go Green</string>
    <string name="storm">Storm Center</string>
    <string name="pu">Powerful You</string>
    <string name="eng_eff_button">Energy Efficiency</string>
    <string name="Trip">TRIP the Robot</string>
    <string name="tips">Tips and Tricks</string>
    <string name="rec">Recycling in MODS</string>
    <string name="Information">Information</string>
    <string name="back_button"><b>Back</b></string>
    <string name="eng_eff_text">
        \n-A playstation uses more energy than a refrigerator\n
        -America burns nearly half of the world’s gasoline\n
        -The World Coal Institute says that, at current production levels, proven coal
        reserves are estimated to last 147 years. That means no more coal after 2155.\n

    <i>So how do we fix this?</i>\n
    -Researchers suggest that if developers had to prepay 50 years’ worth of utility bills,
        buildings would be constructed so that they waste less energy. \n
    -UNPLUG YOUR DEVICES WHEN THEY AREN’T BEING USED!!!!
</string>
    <string name="trip_lyrics">Whatcha gonna do
r-e-c-y-c-l-e

Hey! Alright Whatcha gonna do
with those bottles and jars
Whatcha gonna do
with aluminum cans
put your hands up
pots and pans
i said whatcha gonna do
whatcha gonna do
before it all comes down
r-e-c-y-c-l-e 2x

Whatcha gonna do
with those things you don’t use
pots and pans and all the goofballs too
I said whatcha gonna go
with that worn down tire
we’re so close who knows even copper wire
i said whatcha gonna do
whatcha gunna do to help me and you

whatcha gonna do ertyjht*** me and you

r-e-c-y-c-l-e 2x

hey!
whatcha gonna do
with those clothes  you don’t need
give it to institutions, associations, salvation army
i said whatcha gonna do with mama’s high heel shoes
and anything else you got that she don’t use
i said whacha gonna do
whacha gonna do

give me an r..e..c..y..c..l..e..
gimme an “R”
-R!
gimme an “E”
-E!
gimme a “C”
-C!
gimme a “Y”
-Y!
gimme a “C-L-E”
-C-L-E!
r-e-c-y-c-l-e 13x






Talking part:
they keep their old thermostat in the 60s
and even leave the lights and computers on all day
all i can say is waste waste waste
now, my other neighbors they’re as green as grass
check out that solar panel, wind turbine, and even their high tech window glass
you can almost hear the money being saved and the money being made
on a good day, this family can supply their entire home with clean and renewable energy,
making their house a model of energy efficiency.
dont forget the small things that help out either
an LED light bulb here, and a compost pile there
why they could even build another “me” with the amount of materials they’re recycling
so i want you to go ahead
take a look around my neighborhood
and learn what you can do to be green
there’s a lot of ways to conserve energy out there
And I need you to do your part

</string>

    <string name="rec_at_mods">\nThe City of Fort Lauderdale waste services sorts through all
        the trash to find recyclables as an automatic and free service to all residents. Companies
    such as Republic Services, the sponsor of this Go Green exhibit, help the world by recycling
    what we forget to. </string>
    <string name="no_rec_bins">\t\t\tWhy Are There No\n Recycling Bins In MODS?</string>

    <string name="info_popUp">Information about going green:</string>
    <string name="test">What do you want a map of?</string>
   <string name="about_title">About Android Sudoku</string>
   <string name="about_text">\
<b>Go Green is an...</b>
</string>
</resources>
